<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarSize="7dp"
    android:scrollbarStyle="insideInset"
    android:padding="10dp"
    tools:context=".MainActivity"
    android:background="@drawable/lastone1">

    <!-- Header aligned to top -->

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="54dp"
        android:src="@drawable/th_side"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="252dp"
        android:layout_height="53dp"

        android:layout_marginLeft="39dp"

        android:foregroundGravity="center_vertical"
        android:gravity="center_horizontal"
        android:text="Payment"
        android:textAlignment="center"
        android:textColor="#009688"

        android:textSize="30sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/th_nic"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_nic"
        android:inputType="textPostalAddress"
        android:paddingLeft="17dp"
        app:drawableStartCompat="@drawable/thnic" />







    <EditText
        android:id="@+id/th_mobile"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_mobile"
        android:inputType="textPostalAddress"
        android:paddingLeft="17dp"
        app:drawableStartCompat="@drawable/thcall" />


    <EditText
        android:id="@+id/th_date"
        android:layout_width="372dp"
        android:layout_height="58dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_date"
        android:inputType="textPostalAddress"
        android:paddingLeft="17dp"
        app:drawableStartCompat="@drawable/thdate" />


    <EditText
        android:id="@+id/th_time"
        android:layout_width="368dp"
        android:layout_height="58dp"

        android:layout_marginTop="20dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_time"
        android:inputType="textPostalAddress"
        android:paddingLeft="15dp"
        app:drawableStartCompat="@drawable/thtime" />


    <Button
        android:id="@+id/th_delete1"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/but"
        android:text="@string/th_pay"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="italic|bold" />




</LinearLayout>



