<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbarSize="7dp"
    android:scrollbarStyle="insideInset"
    android:padding="10dp"
    tools:context=".MainActivity"
    android:background="@drawable/lastone1">

    <!-- Header aligned to top -->
    <Button
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="54dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029"
        android:background="@drawable/th_side"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="71dp"
        android:layout_marginLeft="260dp"
        android:layout_marginTop="-55dp"
        app:srcCompat="@drawable/th_dic_pic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="333dp"
        android:layout_height="53dp"
        android:layout_marginTop="-50dp"

        android:foregroundGravity="center_vertical"
        android:gravity="center_horizontal"
        android:text="Appointment"
        android:textAlignment="center"
        android:textColor="#009688"
        android:textCursorDrawable="@drawable/lastone1"
        android:textSize="40sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/th_name"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_name"
        android:inputType="textPostalAddress"
        android:paddingLeft="17dp"
        app:drawableStartCompat="@drawable/thperson" />


    <EditText
        android:id="@+id/th_nic"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_nic"
        android:inputType="textPostalAddress"
        android:paddingLeft="17dp"
        app:drawableStartCompat="@drawable/thnic" />


    <EditText
        android:id="@+id/th_age"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_age"
        android:inputType="textPostalAddress"
        android:paddingLeft="17dp"
        app:drawableStartCompat="@drawable/thage" />


    <EditText
        android:id="@+id/th_address"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_address"
        android:inputType="textPostalAddress"
        android:paddingLeft="17dp"
        app:drawableStartCompat="@drawable/thaddress" />


    <EditText
        android:id="@+id/th_mobile"
        android:layout_width="370dp"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_mobile"
        android:inputType="textPostalAddress"
        android:paddingLeft="17dp"
        app:drawableStartCompat="@drawable/thcall" />


    <EditText
        android:id="@+id/th_date"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_date"
        android:inputType="textPostalAddress"
        android:paddingLeft="17dp"
        app:drawableStartCompat="@drawable/thdate" />


    <EditText
        android:id="@+id/th_time"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="-58dp"
        android:background="@drawable/book"
        android:ems="10"
        android:hint="@string/th_time"
        android:inputType="textPostalAddress"
        android:paddingLeft="15dp"
        app:drawableStartCompat="@drawable/thtime" />

    <Button
        android:id="@+id/th_make_as"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/but"
        android:text="add"
        android:textColor="#fff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/th_view"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="-60dp"
        android:background="@drawable/th_load"

        android:textColor="#fff"
        android:textSize="30sp" />

    <Button
        android:id="@+id/open"
        android:layout_width="136dp"
        android:layout_height="63dp"
        android:layout_marginLeft="230dp"
        android:layout_marginTop="-60dp"
        android:background="@drawable/but"
        android:text="open"
        android:textColor="#fff"
        android:textSize="20sp" />


</LinearLayout>



