<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lastone1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="412dp"
        android:layout_height="53dp"
        android:background="#009688"
        android:foregroundGravity="center_vertical"
        android:gravity="center_horizontal"
        android:text="Reserve booking"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="54dp"
        android:src="@drawable/th_side"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="20dp"
        android:columnCount="1"
        android:rowCount="1">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:layout_row="0"
            android:layout_marginTop="30dp"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/th_view_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_view_1"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/th_view_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="44dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_view_2"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/th_view_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="80dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_view_3"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/th_view_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="114dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_view_4"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/th_view_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="148dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_view_5"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/th_view_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="180dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_view_6"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/th_delete2"
                android:layout_width="135dp"
                android:layout_height="45dp"
                android:layout_row="0"
                android:layout_column="0"

                android:layout_marginLeft="200dp"
                android:layout_marginTop="350dp"
                android:background="@drawable/but"
                android:text="@string/th_reserve12"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="italic|bold" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="350dp"
                android:layout_height="240dp"
                android:layout_row="0"
                android:layout_column="0"
                app:srcCompat="@drawable/thpic1"
                android:layout_marginLeft="-55dp"
                android:layout_marginTop="220dp"/>

            <Button
                android:id="@+id/th_update2"
                android:layout_width="143dp"
                android:layout_height="45dp"
                android:layout_row="0"
                android:layout_column="0"

                android:layout_marginLeft="190dp"
                android:layout_marginTop="280dp"
                android:background="@drawable/but"
                android:text="@string/th_pay"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="italic|bold" />
        </androidx.cardview.widget.CardView>
    </GridLayout>
</RelativeLayout>
