<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lastone1"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="412dp"
        android:layout_height="53dp"
        android:background="#009688"
        android:foregroundGravity="center_vertical"
        android:gravity="center_horizontal"
        android:text="@string/th_reserve"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="40dp"
        android:layout_height="54dp"
        android:src="@drawable/th_side"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />




    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_margin="20dp"
        android:columnCount="1"
        android:rowCount="2">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="164dp"
            android:layout_row="0"
            android:layout_marginTop="30dp"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical" />
            <ImageView
                android:id="@+id/image1"
                android:layout_width="280dp"
                android:layout_height="180dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/funpic1" />

            <TextView
                android:id="@+id/th_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="14dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_text1"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/th_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="38dp"
                android:layout_marginRight="@+id/th_text1"
                android:text="@string/th_text2"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/th_text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="64dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_text3"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/th_text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="87dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_text4"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/th_text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="117dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_text5"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/th_update1"
                android:layout_width="107dp"
                android:layout_height="45dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="165dp"
                android:background="@drawable/but"
                android:text="@string/th_update1"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="italic|bold" />

            <Button
                android:id="@+id/th_delete1"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="165dp"
                android:background="@drawable/but"
                android:text="@string/th_delete1"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="italic|bold" />



        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="154dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical" />
            <ImageView
                android:id="@+id/image"
                android:layout_width="280dp"
                android:layout_height="180dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/funpic1" />

            <TextView
                android:id="@+id/th_text1.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_text1.1"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/th_text2.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="28dp"
                android:layout_marginRight="@+id/th_text1"
                android:text="@string/th_text2.1"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/th_text3.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="54dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_text3.1"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/th_text4.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="77dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_text4.1"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/th_text5.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="107dp"
                android:layout_toRightOf="@+id/image"
                android:text="@string/th_text5.1"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/th_update2"
                android:layout_width="105dp"
                android:layout_height="45dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/but"
                android:text="@string/th_update2"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="italic|bold" />

            <Button
                android:id="@+id/th_delete2"
                android:layout_width="105dp"
                android:layout_height="45dp"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="150dp"
                android:background="@drawable/but"
                android:text="@string/th_delete1"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="italic|bold" />


        </androidx.cardview.widget.CardView>


    </GridLayout>


</RelativeLayout>